<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CapTech_Assigment_1" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1511" translatesAutoresizingMaskIntoConstraints="NO" id="lOC-0R-mRZ">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello World" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ju6-6q-eFL">
                                <rect key="frame" x="130" y="49" width="115" height="49"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="115" id="GKW-cU-yaX"/>
                                    <constraint firstAttribute="height" constant="49" id="So1-FU-RaS"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                                <color key="shadowColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                <size key="shadowOffset" width="-1" height="2"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Zr-2Q-DaJ">
                                <rect key="frame" x="141.5" y="318.5" width="92" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="UcY-ja-dmn"/>
                                    <constraint firstAttribute="width" constant="92" id="ySO-LN-8S2"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="Click Me" backgroundImage="Rectangle">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="abi-nU-VDI" kind="showDetail" action="showViewController:sender:" id="8Uu-Nb-2oV"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Background vector created by Kjpargeter - Freepik.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcX-ko-Nst">
                                <rect key="frame" x="16" y="653.5" width="343" height="13.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="lOC-0R-mRZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2A6-mY-RB4"/>
                            <constraint firstItem="GcX-ko-Nst" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="At6-ej-3DR"/>
                            <constraint firstItem="ju6-6q-eFL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BMW-Gn-bSY"/>
                            <constraint firstItem="GcX-ko-Nst" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="SMx-EK-xeq"/>
                            <constraint firstAttribute="trailing" secondItem="lOC-0R-mRZ" secondAttribute="trailing" id="UNn-rF-9tB"/>
                            <constraint firstItem="6Zr-2Q-DaJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VAz-0b-utM"/>
                            <constraint firstItem="6Zr-2Q-DaJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Zxl-QQ-IY9"/>
                            <constraint firstItem="lOC-0R-mRZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cBK-pj-p7k"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="GcX-ko-Nst" secondAttribute="bottom" id="jnf-RF-MYT"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lOC-0R-mRZ" secondAttribute="bottom" id="spX-3b-Qiz"/>
                            <constraint firstItem="ju6-6q-eFL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="29" id="vtv-Gm-Nla"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-79.200000000000003" y="138.98050974512745"/>
        </scene>
        <!--Table View Controller-->
        <scene sceneID="8Rb-Lk-TEl">
            <objects>
                <viewController id="abi-nU-VDI" customClass="TableViewController" customModule="CapTech_Assigment_1" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="FCc-Yp-G8l"/>
                        <viewControllerLayoutGuide type="bottom" id="rO4-bo-ET9"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="fnw-1a-fwC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qkz-ln-GZg">
                                <rect key="frame" x="0.0" y="5" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Run History" id="qR9-BO-uhC">
                                        <barButtonItem key="leftBarButtonItem" title="&lt;&lt; home" id="K69-Sv-u3B">
                                            <connections>
                                                <segue destination="BYZ-38-t0r" kind="showDetail" id="DaT-SU-hNT"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Remove" id="P8M-dD-0hx">
                                            <connections>
                                                <action selector="removeRecord:" destination="abi-nU-VDI" id="Evl-Nb-B1n"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MPK-OJ-gn0">
                                <rect key="frame" x="0.0" y="49" width="375" height="618"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="X3x-ip-mzL">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X3x-ip-mzL" id="3ed-yx-Way">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="abi-nU-VDI" id="SYU-Bs-FsX"/>
                                    <outlet property="delegate" destination="abi-nU-VDI" id="vyK-dQ-Dmz"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="Qkz-ln-GZg" secondAttribute="trailing" id="0KQ-pf-CcB"/>
                            <constraint firstItem="Qkz-ln-GZg" firstAttribute="leading" secondItem="fnw-1a-fwC" secondAttribute="leading" id="6gz-cL-Lsd"/>
                            <constraint firstItem="MPK-OJ-gn0" firstAttribute="leading" secondItem="fnw-1a-fwC" secondAttribute="leading" id="8Cn-zM-ptT"/>
                            <constraint firstItem="rO4-bo-ET9" firstAttribute="top" secondItem="MPK-OJ-gn0" secondAttribute="bottom" id="DlQ-RL-3y8"/>
                            <constraint firstItem="MPK-OJ-gn0" firstAttribute="top" secondItem="Qkz-ln-GZg" secondAttribute="bottom" id="KcM-5X-zSL"/>
                            <constraint firstItem="Qkz-ln-GZg" firstAttribute="top" secondItem="fnw-1a-fwC" secondAttribute="top" constant="5" id="OJX-sg-Abj"/>
                            <constraint firstAttribute="trailing" secondItem="MPK-OJ-gn0" secondAttribute="trailing" id="pU8-nx-yXM"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="tableView" destination="MPK-OJ-gn0" id="Yws-xl-G0P"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="iO6-5K-atk" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="801" y="139"/>
        </scene>
    </scenes>
    <resources>
        <image name="1511" width="600" height="600"/>
        <image name="Rectangle" width="243" height="81"/>
    </resources>
</document>
